   scripts. Those can be easily rewritten in another language
 * exit ./configure when glib2-dev is not found
 * substract the filesize when files are removed in rdup-snap
 * remove last remnants of syslog from shared.pl.in
 * fixed example cron.rdup
 * use here docs in the shell script usage
 * update rdup-restore and removed rdup-snap-here
 * documentation updates and assorted tweaks


19 Mar 2008: 0.5.7 Miek <miek@miek.nl>
 -- spring cleaning --
 * removed rdup-purge, this can be done in a shell oneliner
 * removed sh-tools/ as it was already deprecated
 * added rdup-hist to show files from the backup and copy, cat
   or diff them. Also see rdup-hist.1
 * Remove syslogging from rdup-snap for the sake of simplicity.
   It also gave troubles on Mac OS X.
 * make the rdup-backups.1 page look nicer
   

15 Mar 2008: 0.5.6 Miek <miek@miek.nl>
 -- Bugfixes and documentation improvements --
 * Document the use of /dev/null better in rdup.1
 * Knut Franke: generate rdup-backups.1 from configure.ac
 * fixup relative pathname argument in conjunction 
   with the -E (exclude) option (reported by Dave Foster)
   Added: abspath.c


12 Feb 2008: 0.5.5 Miek <miek@miek.nl>
 -- code cleanups and license change: GPL 3 --
 * Changed license to GPL 3
 * Print the octal mode (%b) with 4 digits to also allow
    for the correct transfer of sgid/suid/sticky bits.
 * Add support in rdup-snap/rdup-simple for hourly backups
 * Cleanup the perl code
 * Fixup the documentation


22 Jan 2008: 0.5.4 Miek <miek@miek.nl>
  -- bugfixes --
  * Fix longstanding bug on Solaris; don't rewind filedes although
    this worked on all other unices (linux/freebsd/macos).
  * Fix the .nobackup; file located in directories with this file
    in it shouldn't be backed up.


21 Jan 2008: 0.5.3 Miek <miek@miek.nl>
  -- cleanups --
  * Didn't use File::Copy::Recursive - so drop it
  * Small documentation updates 
  * Small fixes in the c source
  * Small build updates, makedist.sh, remove 'strip'

