@@ -1,7 +1,11 @@
 TODO:
 
-use gettext.sh for the shell stuff
-in perl we use localize if available
+aanmaken van hardlink als target nog niet bestaat.
+    - dit is gegarandeerd omdat in de backup een hard link
+    - gevonden is.
+
+rules voor scripts opstellen
+
 need to check this on non gettext platforms - atcmpg
 fix usage to use here docs??
 
