@@ -10,6 +10,8 @@ xx May 2008: 0.6.0 Miek <miek@miek.nl>
  * use here docs in the shell script usage
  * update rdup-restore and removed rdup-snap-here
  * documentation updates and assorted tweaks
+ * hardlink support
+ * symlink has also changed to support this
 
 
 19 Mar 2008: 0.5.7 Miek <miek@miek.nl>
